# zPluginTemplate

./: .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
dependencies/: CMakeLists.txt  update.bat
dependencies/Service/: CMakeLists.txt
dependencies/Service/src/Service/: Macro.h  ZenGin.h
dependencies/Service/src/Service/Common/: ActiveValue.h  EventManager.h  GameSub.h  VarScope.h  zPtr.h
dependencies/Service/src/Service/ZenGin/: KeyCombo.h  ParserExtensions.h  Saveable.h
src/: Plugin.cpp  Plugin.hpp
src/core/: Plugin.cpp  stdafx.h
src/plugin/: aIncludes.hpp  aOptions.hpp
